init: initialize oidc credential between gcp and aws and vice-versa

--- a/scripts/.env.sample
+++ b/scripts/.env.sample
@@ -1,4 +1,7 @@
-export GCP_PROJECT_NUMBER="1234567890"
-export GCP_WI_POOL_ID="my-wi-pool"
-export GCP_WI_PROVIDER_ID="my-wi-provider-id"
-export GCP_SERVICE_ACCOUNT_UNIQUE_ID="12345678901234567890"
+export GCP_PROJECT_ID=<REPLACE_WITH_YOUR GCP_PROJECT_ID can be referenced from 01_gcp_serviceaccount gcp_project_id outputs>
+export GCP_PROJECT_NUMBER=<REPLACE_WITH_YOUR GCP_PROJECT_NUMBER can be referenced from 01_gcp_serviceaccount gcp_project_number outputs>
+export GCP_SERVICE_ACCOUNT_UNIQUE_ID=<REPLACE_WITH_YOUR GCP_SERVICE_ACCOUNT_UNIQUE_ID can be referenced from 01_gcp_serviceaccount service_account_unique_id outputs>
+export GCP_SERVICE_ACCOUNT_EMAIL=<REPLACE_WITH_YOUR GCP_SERVICE_ACCOUNT_EMAIL can be referenced from 01_gcp_serviceaccount service_account_email outputs>
+export AWS_IAM_ROLE_ARN=<REPLACE_WITH_YOUR AWS_IAM_ROLE_ARN can be referenced from 02_aws_iam_role aws_iam_role_arn outputs>
+export GCP_WI_POOL_ID=<REPLACE_WITH_YOUR GCP_WI_POOL_ID can be referenced from 03_gcp_workloadidentity gcp_workload_identity_pool_id outputs>
+export GCP_WI_PROVIDER_ID=<REPLACE_WITH_YOUR GCP_WI_PROVIDER_ID can be referenced from 03_gcp_workloadidentity gcp_workload_identity_pool_provider_id outputs>
